RDCC-6528-Address Sonar Coverage issues in all Ref data repositories